--- a/src/main/resources/templates/user/login/register.html
+++ b/src/main/resources/templates/user/login/register.html
@@ -32,12 +32,16 @@
           <input type="text" class="form-control input-large" name="age" id="age" placeholder="나이" required>
         </div>
       </div>
-<!--      <div class="form-group">-->
-<!--        <label for="role" class="col-sm-2 control-label">권한</label>-->
-<!--        <div class="col-sm-10">-->
-<!--          <input type="text" class="form-control input-large" name="role" id="role" placeholder="권한" required>-->
-<!--        </div>-->
-<!--      </div>-->
+      <div class="form-group">
+        <label for="role" class="col-sm-2 control-label">권한</label>
+        <div class="col-sm-10">
+            <select id="role" name="role" required class="form-control input-large">
+                <option value="USER">USER</option>
+                <option value="MANAGER">MANAGER</option>
+                <option value="ADMIN">ADMIN</option>
+            </select>
+        </div>
+      </div>
       <div class="form-group">
         <div class="col-sm-offset-1 col-sm-10">
           <button type="Submit" class="btn btn-dark btn-lg">가입하기</button>
