--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="ko">
 <head th:replace="layout/header::userHead"></head>
 <body>
 <div th:replace="layout/top::header"></div>
@@ -14,10 +14,12 @@
 <!--            <form name="frm" id="frm" action="#" method="post" onsubmit="return false" class="form-signin">-->
                 <div class="form-group">
                     <input type="text" class="form-control" name="name" placeholder="아이디" required="required"
-                           autofocus="autofocus">
+                           autofocus="autofocus" />
+
+                    <input type="hidden" th:value="secret-value-12345" name="secretKey" />
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password" placeholder="비밀번호" required="required">
+                    <input type="password" class="form-control" name="password" placeholder="비밀번호" required="required" />
                 </div>
 
                 <div class="form-group">
