--- a/src/main/resources/templates/user/messages.html
+++ b/src/main/resources/templates/user/messages.html
@@ -11,7 +11,7 @@
                     <li class="nav-item">
                         <div style="padding-top:10px;" class="nav flex-column nav-pills" aria-orientation="vertical">
                             <a th:href="@{/}" style="margin:5px;" class="nav-link text-primary">대시보드</a>
-                            <a th:href="@{/myPage}" style="margin:5px;" class="nav-link text-primary">마이페이지</a>
+                            <a th:href="@{/users/myPage}" style="margin:5px;" class="nav-link text-primary">마이페이지</a>
                             <a th:href="@{/messages}" style="margin:5px;" class="nav-link active">메시지</a>
                             <a th:href="@{/config}" style="margin:5px;" class="nav-link text-primary">환경설정</a>
                         </div>
