--- a/src/main/resources/templates/user/login/denied.html
+++ b/src/main/resources/templates/user/login/denied.html
@@ -11,7 +11,7 @@
                     <li class="nav-item">
                         <div style="padding-top:10px;" class="nav flex-column nav-pills" aria-orientation="vertical">
                             <a th:href="@{/}" style="margin:5px;" class="nav-link  text-primary">대시보드</a>
-                            <a th:href="@{/mypage}" style="margin:5px;" class="nav-link text-primary">마이페이지</a>
+                            <a th:href="@{/users/myPage}" style="margin:5px;" class="nav-link text-primary">마이페이지</a>
                             <a th:href="@{/messages}" style="margin:5px;" class="nav-link text-primary">메시지</a>
                             <a th:href="@{/config}" style="margin:5px;" class="nav-link text-primary">환경설정</a>
                         </div>
@@ -21,7 +21,7 @@
         </nav>
         <div style="padding-top:50px;"  class="col">
             <div class="container text-center">
-                <h1><span th:text="${username}" class="alert alert-danger" />님은 접근 권한이 없습니다.</h1>
+                <h1><span th:text="${name}" class="alert alert-danger"></span>님은 접근 권한이 없습니다.</h1>
                 <br />
                 <h3 th:text="${exception}"></h3>
             </div>
