관리자 시스템 - 권한 도메인, 서비스, 레파지토리 구성
Took 2 hours 5 minutes

--- a/src/main/resources/templates/admin/user/detail.html
+++ b/src/main/resources/templates/admin/user/detail.html
@@ -18,7 +18,7 @@
       <div class="form-group">
         <label for="username" class="col-sm-2 control-label">아이디</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control input-large" name="username" id="username" placeholder="username" th:value="*{username}" required>
+          <input type="text" class="form-control input-large" name="username" id="username" placeholder="username" th:value="*{name}" required>
         </div>
       </div>
 
