--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -27,13 +27,13 @@
 					<tr class="link_btn hover" th:each="account : ${accounts}">
 
 						<td style="text-align: left;">
-							<a th:href="@{'/admin/accounts/' + ${account.id}}"><span th:text="${account.username}">회원</span></a>
+							<a th:href="@{'/admin/accounts/' + ${account.id}}"><span th:text="${account.name}">회원</span></a>
 						</td>
 						<td style="text-align: left;" th:text="${account.email}"></td>
 						<td style="text-align: left;" th:text="${account.age}"></td>
 						<td style="text-align: left;">
-							<span th:each="role,iter : ${account.userRoles}">
-								<h6 th:text="${role.roleName}"></h6>
+							<span th:each="role,iter : ${account.role}">
+								<h6 th:text="${role}"></h6>
 							</span>
 						</td>
 					</tr>
