DB 연동 자원 및 권한 가져오기 추가
Took 2 hours 29 minutes

--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -32,8 +32,8 @@
 						<td style="text-align: left;" th:text="${account.email}"></td>
 						<td style="text-align: left;" th:text="${account.age}"></td>
 						<td style="text-align: left;">
-							<span th:each="role,iter : ${account.role}">
-								<h6 th:text="${role}"></h6>
+							<span th:each="role,iter : ${account.roles}">
+								<h6 th:text="${role.roleName}"></h6>
 							</span>
 						</td>
 					</tr>
