--- a/src/main/resources/templates/admin/user/detail.html
+++ b/src/main/resources/templates/admin/user/detail.html
@@ -42,7 +42,7 @@
       </div>
       <div class="form-group">
         <label for="roles" class="col-sm-2 control-label">권한</label>
-        <div class="col-sm-10" th:each="role: ${roleList}">
+        <div class="col-sm-10" th:each="role: ${account.roles}">
           <input th:type="checkbox" name="roles" id="roles"
                  th:text="${role.roleName}"
                  th:value="${role.roleName}"
