--- a/src/main/resources/templates/user/login/register.html
+++ b/src/main/resources/templates/user/login/register.html
@@ -34,12 +34,21 @@
       </div>
       <div class="form-group">
         <label for="role" class="col-sm-2 control-label">권한</label>
-        <div class="col-sm-10">
-            <select id="role" name="role" required class="form-control input-large">
-                <option value="USER">USER</option>
-                <option value="MANAGER">MANAGER</option>
-                <option value="ADMIN">ADMIN</option>
-            </select>
+        <div class="col-sm-10" id="role">
+            <label>
+                <input th:type="checkbox" name="roles" value="ROLE_USER" />
+            </label>USER
+            <label>
+                <input th:type="checkbox" name="roles" value="ROLE_MANAGER" />
+            </label>MANAGER
+            <label>
+                <input th:type="checkbox" name="roles" value="ROLE_ADMIN" />
+            </label>ADMIN
+<!--            <select id="role" name="role" required class="form-control input-large">-->
+<!--                <option value="USER">USER</option>-->
+<!--                <option value="MANAGER">MANAGER</option>-->
+<!--                <option value="ADMIN">ADMIN</option>-->
+<!--            </select>-->
         </div>
       </div>
       <div class="form-group">
